# o2e

./: .gitignore  README.md  app.py  bitcoin_utils.py  build.sh  config.yaml  dev.sh  yubikey_utils.py
backend/: :memory:  README.md  README_YUBIKEY_SALT.md  app.py  config.py  config.yaml  pyproject.toml
backend/api/: auth.py  seeds.py  yubikey.py
backend/docs/: yubikey_salt_api.md  yubikey_salt_technical_design.md
backend/models/: __init__.py  database.py  seed.py  user.py  yubikey.py  yubikey_salt.py
backend/routes/: auth.py  seed_routes.py  user_routes.py  yubikey_routes.py
backend/scripts/: reset_db.py
backend/services/: auth_service.py  bitcoin_service.py  crypto_service.py  encryption_service.py  secure_memory_service.py  webauthn_service.py
backend/templates/: authenticate.html  delete_credential.html  index.html  register.html  store_seed.html  test_yubikey.html
backend/tests/: __init__.py  conftest.py  test_seed.py  test_seed_routes.py
backend/tests/integration/: test_yubikey_routes_integration.py
backend/tests/unit/: __init__.py  conftest.py  test_bitcoin_utils.py  test_config.py  test_database_manager.py  test_security.py  test_user_model.py  test_webauthn.py  test_webauthn_service.py  test_yubikey_model.py  test_yubikey_routes.py  test_yubikey_routes.py.bak  test_yubikey_salt.py
backend/utils/: bitcoin_utils.py  logging.py  openpgp_to_ecdsa.py  security.py  validation.py
data/: credentials.json  encrypted_seeds.json
doc/: api_interface_design.md  architecture.md  cursor_rules_reference.md  detailed_implementation_plan.md  e2e-test.md  (+9 more)
(+63 files in other folders)
